Set overflow hidden on popup window to avoid see the image on the header goes over the edges.

--- a/cc/scss/components/_popups.scss
+++ b/cc/scss/components/_popups.scss
@@ -18,6 +18,7 @@
     }
 
     .pum-content {
+      overflow: hidden;
 
       img.cc-logo {
         display: block;
